Ingress/03-Ingress-SSL-Resource/02-Ingress-SSL.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl-new
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt
    appgw.ingress.kubernetes.io/ssl-redirect: "true"    
spec:
  rules:
    - host: sapp3.test.avinashyadav.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80                   
  tls:
  - hosts:
    - sapp3.test.avinashyadav.tk
    secretName: sapp3-kubeoncloud-secret
